# multiplex

./: .appenv  .gitignore  AGENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/spec/: feature-delay_suffixes.md  feature-input_guards.md  feature-input_redirects.md  feature-process_input_guards.md  feature-process_start_condition.md  feature-start_on_output.md  feature-timestamps.md  format-command.md
examples/: README.md  actions-demo.sh  cicd-pipeline.sh  color-demo.sh  complete-demo.sh  delay-suffixes-demo.sh  dependencies-demo.sh  dev-environment.sh  http-benchmark.sh  parallel-coordination.sh  process-delays.sh  redirects-demo.sh  sequential-build.sh  special-cases.sh  time-delays.sh  timestamp-demo.sh
src/py/: multiplex.py  multirun.py
tests/: api-command.py  api-terminate-descendants.py  api-terminate.py  cli-delay-terminate.sh  core-killtask.py  feature-delay_suffixes.py  feature-dependencies.py  feature-dependency-delays.py  run-stdout-buffer.py  test-cli-ctrl-c.py  test-color.py  test-comprehensive.py  test-interactive-ctrl-c.py  test-macos.py  test-parallel-execution.py  test-process-start-dependency.py  test-process-tree.py  test-redirects-runtime.py  test-redirects.py  test-sighup.py  test-sigint.py  test-start-delays.py  test-start-on-output-runtime.py  test-start-on-output.py  test-timestamp.py  unit-parse.py
tests/assets/: forking-process.sh
