[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiplex"
version = "1.0.0"
description = "A command-line multiplexer for running multiple processes in parallel with coordination"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Sébastien Pierre", email = "sebastien@ffctn.com"}
]
maintainers = [
    {name = "Sébastien Pierre", email = "sebastien@ffctn.com"}
]
keywords = [
    "multiplex", "process", "command", "parallel", "concurrent", 
    "shell", "cli", "automation", "build", "coordination", "orchestration"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/sebastien/multiplex"
Repository = "https://github.com/sebastien/multiplex"
Documentation = "https://github.com/sebastien/multiplex#readme"
"Bug Reports" = "https://github.com/sebastien/multiplex/issues"

[project.scripts]
multiplex = "multiplex:cli"

[tool.setuptools]
package-dir = {"" = "src/py"}
py-modules = ["multiplex"]

[tool.setuptools.packages.find]
where = ["src/py"]
include = []

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.sh"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=multiplex",
    "--cov-report=term-missing",
]